--- a/index.html
+++ b/index.html
@@ -1,86 +1,55 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Input Form by Bootstrap</title>
-  </head>
-  <body>
-    <div class="container-fluid bg-dark-text-light py-3">
-      <header class="text-center">
-        <h1 class="display-6"> Welcome to our page</h1>
-      </header>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pendaftaran Member Chelsea Indonesia Supporters Club</title>
+  <!-- Bootstrap CDN -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+ 
+</head>
+<body style="background-color: #034694; color: white; height: 100vh;">
+
+<div class="container mt-5">
+  <h1 class="text-center mb-4">Form Pendaftaran Member</h1>
+  <h3 class="text-center mb-4">Chelsea Indonesia Supporters Club</h3>
+
+  <form>
+    <div class="mb-3">
+      <label for="namaLengkap" class="form-label">Nama Lengkap</label>
+      <input type="text" class="form-control" id="namaLengkap" placeholder="Masukkan nama lengkap">
     </div>
-    <section class="container my-2 bg-dark w-50 text-light p-2">
-<form class="row g-3">
-   <div class="col-md-4">
-    <label for="validationCustom01" class="form-label">First name</label>
-    <input type="text" class="form-control" id="validationCustom01" value="Mark" required>
-    <div class="valid-feedback">
-      Looks good!
+
+    <div class="mb-3">
+      <label for="email" class="form-label">Email</label>
+      <input type="email" class="form-control" id="email" placeholder="Masukkan email">
     </div>
-  </div>
-  <div class="col-md-4">
-    <label for="validationCustom02" class="form-label">Last name</label>
-    <input type="text" class="form-control" id="validationCustom02" value="Otto" required>
-    <div class="valid-feedback">
-      Looks good!
+
+    <div class="mb-3">
+      <label for="nomorTelepon" class="form-label">Nomor Telepon</label>
+      <input type="text" class="form-control" id="nomorTelepon" placeholder="Masukkan nomor telepon">
     </div>
-  </div>
-  <div class="col-md-4">
-    <label for="validationCustomUsername" class="form-label">Username</label>
-    <div class="input-group has-validation">
-      <span class="input-group-text" id="inputGroupPrepend">@</span>
-      <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
-      <div class="invalid-feedback">
-        Please choose a username.
-      </div>
+
+    <div class="mb-3">
+      <label for="alamat" class="form-label">Alamat</label>
+      <textarea class="form-control" id="alamat" rows="3" placeholder="Masukkan alamat"></textarea>
     </div>
-  </div>
-  <div class="col-md-6">
-    <label for="inputEmail4" class="form-label">Email</label>
-    <input type="email" class="form-control" id="inputEmail4">
-  </div>
-  <div class="col-md-6">
-    <label for="inputPassword4" class="form-label">Password</label>
-    <input type="password" class="form-control" id="inputPassword4">
-  </div>
-  <div class="col-12">
-    <label for="inputAddress" class="form-label">Address</label>
-    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-  </div>
-  <div class="col-12">
-    <label for="inputAddress2" class="form-label">Address 2</label>
-    <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
-  </div>
-  <div class="col-md-6">
-    <label for="inputCity" class="form-label">City</label>
-    <input type="text" class="form-control" id="inputCity">
-  </div>
-  <div class="col-md-4">
-    <label for="inputState" class="form-label">State</label>
-    <select id="inputState" class="form-select">
-      <option selected>Choose...</option>
-      <option>...</option>
-    </select>
-  </div>
-  <div class="col-md-2">
-    <label for="inputZip" class="form-label">Zip</label>
-    <input type="text" class="form-control" id="inputZip">
-  </div>
-  <div class="col-12">
-    <div class="form-check">
-      <input class="form-check-input" type="checkbox" id="gridCheck">
-      <label class="form-check-label" for="gridCheck">
-        Check me out
-      </label>
+
+    <div class="mb-3">
+      <label for="anggotaLain" class="form-label">Pernah Menjadi Anggota Supporters Club Lain?</label>
+      <select class="form-select" id="anggotaLain">
+        <option value="Tidak">Tidak</option>
+        <option value="Ya">Ya</option>
+      </select>
     </div>
-  </div>
-  <div class="col-12">
-    <button type="submit" class="btn btn-primary">Sign in</button>
-  </div>
-</form>
-    </section>
-    
-  </body>
+
+    <div class="d-grid gap-2">
+      <button type="submit" class="btn btn-primary">Daftar Sekarang</button>
+    </div>
+  </form>
+</div>
+
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
